--- a/assignment_1.html
+++ b/assignment_1.html
@@ -4,22 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nirmal Bakery shop</title>
+    <link rel="stylesheet" href="style.css">
 
-    <style>
-    table {
-      border: 1px solid black;
-      border-collapse: collapse;
-      width: 60%;
-    }
-    th, td {
-      border: 1px solid black;
-      padding: 8px;
-      text-align: left;
-    }
-    th {
-      background-color: #f2d9d9;
-    }
-  </style>
+  
 </head>
 <body>
     <h1>This is my Bakery shop website </h1>
